# llvm-playground

./: .gitignore  LICENSE  build_llvm_project.sh
calc/: .gitignore  CMakeLists.txt  build.sh  rtcalc.c  run.sh
calc/src/: CMakeLists.txt  ast.h  calc.cpp  code_gen.cpp  code_gen.h  lexer.cpp  lexer.h  parser.cpp  parser.h  sema.cpp  sema.h
tinylang/: CMakeLists.txt  README.md  build.sh  run.sh
tinylang/cmake/modules/: AddTinylang.cmake
tinylang/include/tinylang/basic/: version.h  version.inc.in
tinylang/lib/basic/: CMakeLists.txt  version.cpp
tinylang/tools/driver/: CMakeLists.txt  driver.cpp
